# Windfall

./: .gitignore  CREDITS.md  README.md  pyproject.toml  run_windfall.py  windfall.spec
src/windfall/: __init__.py  __main__.py
src/windfall/addresses/: __init__.py  version.py
src/windfall/assets/: map_backgrounds.json
src/windfall/core/: __init__.py  poller.py
src/windfall/game/: __init__.py  actors.py  camera.py  collision.py  inventory.py  player.py
src/windfall/memory/: __init__.py  hook.py  ppc.py
src/windfall/tools/: __init__.py  discover.py  probe.py
src/windfall/ui/: __init__.py  connection_bar.py  format.py  main_window.py
src/windfall/ui/map/: __init__.py  background.py  islands.py  map_panel.py  map_view.py
src/windfall/ui/panels/: __init__.py  actors_panel.py  camera_panel.py  inventory_panel.py  link_panel.py  movie_panel.py
