[project]
name = "windfall"
version = "0.1.0"
description = "A STROOP-like real-time memory inspector/manipulator for The Legend of Zelda: The Wind Waker (Dolphin)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "dolphin-memory-engine>=1.3",
]

[project.scripts]
windfall = "windfall.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["windfall*"]

[tool.setuptools.package-data]
windfall = ["assets/*.png", "assets/*.jpg", "assets/*.ico"]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
